--- a/Minesweeper/Minesweeper.vcxproj.filters
+++ b/Minesweeper/Minesweeper.vcxproj.filters
@@ -29,6 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Minesweeper_TemporaryKey.pfx" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
