--- a/Minesweeper.Win32/packages.config
+++ b/Minesweeper.Win32/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Windows.CppWinRT" version="2.0.200316.3" targetFramework="native" />
+  <package id="Microsoft.Windows.ImplementationLibrary" version="1.0.191107.2" targetFramework="native" />
+  <package id="robmikh.common" version="0.0.2-beta" targetFramework="native" />
 </packages>
